--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,12 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "_redirects",
+                "input": "./",
+                "output": "/"
+              }
             ],
             "styles": [
               "src/styles.css",
